force-app/main/default/objects/Asset_Custody__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Trolley_Name__c</fullName>
        <label>Asset Trolley Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type_DrillDown__c</fullName>
        <formula>TEXT(School_Asset__r.Type_Drill_Down__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Type Drill Down</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <formula>TEXT( School_Asset__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <formula>School_Asset__r.Current_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custodian_Detail__c</fullName>
        <formula>text(Staff_Member__r.School_Department__c )&amp;&quot;-&quot;&amp; text(Staff_Member__r.School_Section__c) &amp; text(Student__r.Year_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custodian Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian_Name__c</fullName>
        <formula>Staff_Member__r.Name &amp;  Student__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custodian Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Checked_Out__c</fullName>
        <label>Date Checked Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>School_Asset__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Alias__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Asset__c</fullName>
        <label>School Asset</label>
        <referenceTo>School_Assets__c</referenceTo>
        <relationshipLabel>Asset Custody</relationshipLabel>
        <relationshipName>Asset_Custody</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(School_Asset__r.Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Custody</relationshipLabel>
        <relationshipName>Asset_Custodies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Loan</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Not returned</fullName>
                </value>
                <value>
                    <fullName>Used in Trolley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Asset Custody</relationshipLabel>
        <relationshipName>Asset_Custody</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Start_Date__c</fullName>
        <formula>TEXT(DAY(  Date_Checked_Out__c )) + &quot;/&quot; + 
TEXT(MONTH(Date_Checked_Out__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Date_Checked_Out__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Start Date</label>
        <type>Text</type>
    </fields>
    <label>Asset Custody</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Custody#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Custodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_Empty_Name_if_Use_in_Trolley</fullName>
        <active>true</active>
        <errorConditionFormula>AND (TEXT( Status__c ) = &quot;Used in Trolley&quot;,  Asset_Trolley_Name__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Asset_Trolley_Name__c</errorDisplayField>
        <errorMessage>Trolley Name must be specified if the Asset is used in a trolley</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Asset_is_chosen</fullName>
        <active>true</active>
        <errorConditionFormula>School_Asset__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>School_Asset__c</errorDisplayField>
        <errorMessage>You must associate one asset to this custody record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Return_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Returned__c &lt; Date_Checked_Out__c</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Date Returned Cannot be BEFORE the Check-Out date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Return_Date_v_status</fullName>
        <active>true</active>
        <description>Ensures that a return date is inputed if a Custody is completed</description>
        <errorConditionFormula>AND( TEXT(Status__c )&lt;&gt;&quot;Used in Trolley&quot;, TEXT(Status__c )&lt;&gt;&quot;On Loan&quot;, TEXT(Status__c )&lt;&gt;&quot;Not returned&quot;, ISBLANK(Date_Returned__c))</errorConditionFormula>
        <errorDisplayField>Date_Returned__c</errorDisplayField>
        <errorMessage>Given the Status selected, you must input a Return Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_at_least_One_Custodian</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Staff_Member__c =&quot;&quot;, 
    Student__c =&quot;&quot;,
    TEXT(Status__c) !=&quot;Used in Trolley&quot;,
    TEXT(PRIORVALUE(Status__c)) !=&quot;Used in Trolley&quot;
    )</errorConditionFormula>
        <errorMessage>You must select EITHER a staff member or student as custodian</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_both_custodians</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Staff_Member__c  &lt;&gt; &quot;&quot;, Student__c &lt;&gt;&quot;&quot;)</errorConditionFormula>
        <errorMessage>You must have EITHER one staff member OR one student. You can&apos;t have BOTH.</errorMessage>
    </validationRules>
</CustomObject>